/* Translations */ <et cetera#1022969>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -42,6 +42,7 @@ The [[grocery]] sells [[cucumber]]s, [[lettuce]], [[radish]]es, etc.
 *Slovak: [[a tak ďalej]]
 *Spanish: [[etcétera]], [[y más]], [[al fin]]
 *Swedish: et cetera, [[etc.]], [[etcetera]], [[osv.]], [[och så vidare]]
+*Turkish: ve saire(vs(old-fashioned)), ve bunun gibi (vb), ve benzeri(vb)
 *Vietnamese: [[vân vân]], [[v.v.]]
 {{bottom}}
 
