--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -18,6 +18,7 @@ From the Latin [[id est]], meaning "that is"
 ====Translations====
 *French: [[c.-à-d.]]
 *German: [[d.h.]] (''[[das heißt]]'')
+*Spanish: [[es decir,]]
 
 [[de:i.e.]]
 [[pt:i.e.]]
