--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -1,11 +1,12 @@
-''See also [[ie]], [[-ie]]''
+{{see3|ie|IE|-ie}}
 ==English==
 
 ===Etymology===
-From the Latin [[id est]], meaning "that is"
+From the Latin [[id est]], meaning “that is”
 
 ==={{abbreviation}}===
 '''i.e.'''
+
 # That is, in other words, that is to say; in essence.
 
 ===Usage notes===
