--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -77,6 +77,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 ====See also====
 *[[beautifully]]
 *[[beautifulness]]
+*[[beauty]]
 
 ===Interjection===
 Term meaning "What a mess!" or "What a screw-up!"
