--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -25,7 +25,7 @@
 ====Translations====
 '''construction or natural feature that spans a divide'''
 {{top}}
-*Arabic: {{ARchar|[[كوبري]]}} (kobry)
+*Arabic: {{ARchar|[[كوبري]]}} (kóbry)
 *Basque: [[zubi]]
 *Bosnian: [[most#Bosnian|most]] {{m}}, [[ćuprija]] {{f}}
 *[[Breton]]: [[pont#Breton|pont]] {{m}} -où
@@ -41,15 +41,15 @@
 *French: [[pont]] {{m}}
 *[[Frisian]]: [[brêge]]
 *German: [[Brücke]] {{f}}
-*Greek γέφυρα
-*Hungarian: [[híd]]
+*Greek: [[γέφυρα]] (yéfira)
+*Hungarian: [[hid#Hungarian|híd]]
 *Icelandic: [[brú]] {{f}} 
 *[[Ido]]: [[ponto]]
 *Indonesian: [[jembatan]]
 *Irish: [[droichead]]
 *Italian: [[ponte#Italian|ponte]] {{m}}
 *Japanese: [[橋]] ([[はし]], hashi)
-*Korean: [[다리]] (da-ri), [[Hanja]]: [[교]] (kyo, used always as suffix)
+*Korean: [[다리]] (dari), ...[[교]] (...gyo, used as suffix)
 {{mid}}
 *[[Kurdish]]:
 *:Kurmancî: [[pir]]
@@ -61,12 +61,12 @@
 *Polish: [[most#Polish|most]] {{m}}
 *Portuguese: [[ponte#Portuguese|ponte]] {{f}}
 *Romanian: [[pod]] [[punte]]
-*Russian: [[мост]] {{m}}
+*Russian: [[мост]] (most) {{m}}
 *Serbian:
 *:Cyrillic: [[мост#Serbian|мост]] {{m}}, [[ћуприја#Serbian|ћуприја]] {{f}}
-*:Latin: [[most#Serbian|most]] {{m}}, [[ćuprija#Serbian|ćuprija]] {{f}}
+*:Roman: [[most#Serbian|most]] {{m}}, [[ćuprija#Serbian|ćuprija]] {{f}}
 *Slovak: [[most#Slovak|most]] {{m}}
-*Slovene: [[most]] {{m}}
+*Slovene: [[most#Slovene|most]] {{m}}
 *Spanish: [[puente]] {{m}}, [[bóveda]] {{f}} (''El Salvador'')
 *Swedish: [[bro#Swedish|bro]] {{c}}
 *Tamazight: [[ⵜⵉⵍⴻⴳⴳⵡⵉⵜ]] (tileggwit) {{f}}
@@ -87,10 +87,10 @@
 *Latvian: [[bridžs]] {{m}}
 {{mid}}
 *Polish: [[brydż]] {{m}}
-*Russian: [[бридж]] {{m}}
+*Russian: [[бридж]] (bridž) {{m}}
 *Serbian:
 *:Cyrillic: [[бриџ#Serbian|бриџ]] {{m}}
-*:Latin: [[bridž#Serbian|bridž]] {{m}}
+*:Roman: [[bridž#Serbian|bridž]] {{m}}
 *Slovene: [[bridž]] {{m}}
 *Spanish: bridge {{m}}
 *Swedish: bridge
@@ -108,13 +108,13 @@
 *Bosnian: [[proteza#Bosnian|proteza]] {{f}}
 *Catalan: [[pont]] {{m}}
 *French: bridge {{m}}
-*Hungarian: [[híd]]
+*Hungarian: [[hid#Hungarian|híd]]
 *Italian: [[ponte]] {{m}}
 {{mid}}
-*Russian: [[мост]] {{m}}
+*Russian: [[мост]] (most) {{m}}
 *Serbian:
 *:Cyrillic: [[протеза#Serbian|протеза]] {{f}}
-*:Latin: [[proteza#Serbian|proteza]] {{f}}
+*:Roman: [[proteza#Serbian|proteza]] {{f}}
 *Slovene: [[mostiček]] {{m}}
 *Spanish: [[puente]] {{m}}
 {{bottom}}
@@ -122,8 +122,8 @@
 '''nautical'''
 {{top}}
 *Bosnian: [[kapetanski mostić#Bosnian|kapetanski mostić]] {{m}}
-*Hungarian: [[híd]]
-*Russian: [[капитанский мостик]] {{m}}
+*Hungarian: [[hid#Hungarian|híd]]
+*Russian: [[капитанский мостик]] (kapitánskij móstik) {{m}}
 {{mid}}
 *Serbian:
 *:Cyrillic: [[капетански мостић#Serbian|капетански мостић]] {{m}}
