--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -42,6 +42,7 @@
 *Finnish: [[suora]]
 *French: [[droit]] {{m}} (1), [[droite]] {{f}} (1), [[comme il faut]] (3), [[pur]] (5), [[pure]] (5), [[hetero]] (8)
 *German: [[gerade]] (1), [[hetero]] (8)
+*[[Greek]]: [[ίσια]]
 *Hungarian: [[egyenes]] (1,3), [[őszinte]] (3), [[heteró]] (8)
 *Icelandic: [[beinn]] (1)
 *Irish: [[díreach]] (1,8)
