--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -42,7 +42,7 @@
 *Galician: [[Francia]] {{f}}
 *Georgian: [[საფრანგეთი]] (saphrangeti)
 *German: [[Frankreich]] {{n}}
-*Greek: [[Γαλλία]] [ɣa(l).ˈli.a] {{f}}
+*[[Greek]]: [[Γαλλία]] [ɣa(l).ˈli.a] {{f}}
 *[[Gujarati]]: [[ફ્રાઁસ]]
 *[[Haitian Creole]]: [[Frans]]
 *Hindi: [[फ़्राँस]]
