--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -39,7 +39,10 @@
 
 ====Translations====
 {{top}}
+*Albanian: [[pret]]
 *Bulgarian: [[сека]]
+*Catalan: [[tallar]]
+*Croatian: [[rezati]]
 *Dutch: [[snijden]], [[afsnijden]], [[knippen]]
 *Danish:
 ** 1, 2, 5, 6: [[skære]] (''knife, bat''), [[snitte]] (''knife, bat''), [[klippe]] (''scissors''), [[hugge]] (''axe, chisel''), [[save]] (''saw'').
@@ -52,7 +55,7 @@
 ** 11: [[skære]], [[krydse]] (''Geometry'')
 ** 13: [[afbryde]].
 {{mid}}
-*[[Esperanto]]: [[tondi]]
+*Esperanto: [[tranĉi]]
 *Finnish: [[leikata]] (1), [[eristää]] (2), [[poistaa]] (2)
 *French: [[couper]]
 *[[Guwal]]: [[nudin]], [[gunban]], [[banyin]]
