--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -188,6 +188,7 @@
 *German: [[Schauspiel]] {{n}}
 {{mid}}
 *Italian: [[dramma]] {{m}}
+*Portuguese: [[peça]] [[teatral]] {{f}}
 *Slovene: [[igra]] {{f}}
 *Swedish: [[pjäs]] {{c}}
 {{bottom}}
