--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -33,6 +33,7 @@
 # {{transitive}}: To determine the [[number]] (of objects in a group.)
 
 ====Translations====
+{{top}}
 *[[Breton]]: [[kontañ]]
 *[[w:Danish language|Danish]]: [[tælle]]
 *Dutch: [[tellen]]
@@ -40,12 +41,14 @@
 *Finnish: [[laskea]]
 *French: [[compter]]
 *German: [[zählen]]
+{{mid}}
 *Italian: [[contare]]
 *Polish: [[liczyć]]
 *Portuguese: [[contar]]
 *Romanian: [[număra]]
 *Russian: [[считать]] ''imperf''
 *Spanish: [[contar]]
+{{bottom}}
 
 [[es:count]]
 [[fr:count]]
