Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <倪#1037598>

--- a/en/倪/倪.11045.wikitext
+++ b/en/倪/倪.11045.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[げい]] (gei), [[がい]] (gai)
-** '''[[Kun]]''': [[きわ]] (kiwa)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[げい]] (gei), [[がい]] (gai)|kun readings=[[きわ]] (kiwa)}}
 
 * '''Other info''':  
 
