Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <倭#1037601>

--- a/en/倭/倭.11052.wikitext
+++ b/en/倭/倭.11052.wikitext
@@ -34,11 +34,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[い]] (i) < [[ゐ]] (wi), [[わ]] (wa)
-** '''[[Kun]]''': [[したがう]] (shitagau), [[やまと]] (yamato)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[い]] (i) < [[ゐ]] (wi), [[わ]] (wa)|kun readings=[[したがう]] (shitagau), [[やまと]] (yamato)}}
 
 * '''Other info''':  
 
