--- a/en/倯/倯.11056.wikitext
+++ b/en/倯/倯.11056.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[しょう]] (shō), [[しゅ]] (shu)
-** '''[[Kun]]''': [[おこたる]] (okotaru), [[ののしる]] (nonoshiru)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[しょう]] (shō), [[しゅ]] (shu)|kun readings=[[おこたる]] (okotaru), [[ののしる]] (nonoshiru)}}
 
 * '''Other info''':  
 
