--- a/en/倱/倱.11061.wikitext
+++ b/en/倱/倱.11061.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[こん]] (kon), [[ごん]] (gon)
-** '''[[Kun]]''': 
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[こん]] (kon), [[ごん]] (gon)|kun readings=}}
 
 * '''Other info''':  
 
