--- a/en/倳/倳.11066.wikitext
+++ b/en/倳/倳.11066.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[し]] (shi)
-** '''[[Kun]]''': [[さす]] (sasu), [[さしこむ]] (sashikomu)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[し]] (shi)|kun readings=[[さす]] (sasu), [[さしこむ]] (sashikomu)}}
 
 * '''Other info''':  
 
