--- a/en/倲/倲.11064.wikitext
+++ b/en/倲/倲.11064.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[とう]] (tō), [[つ]] (tsu)
-** '''[[Kun]]''': [[おろかなさま]] (orokanasama)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[とう]] (tō), [[つ]] (tsu)|kun readings=[[おろかなさま]] (orokanasama)}}
 
 * '''Other info''':  
 
