--- a/en/偀/偀.11086.wikitext
+++ b/en/偀/偀.11086.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[えい]] (ei)
-** '''[[Kun]]''': [[はなぶさ]] (hanabusa)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[えい]] (ei)|kun readings=[[はなぶさ]] (hanabusa)}}
 
 * '''Other info''':  
 
