--- a/en/偃/偃.11089.wikitext
+++ b/en/偃/偃.11089.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[えん]] (en)
-** '''[[Kun]]''': [[ふせる]] (fuseru), [[やすむ]] (yasumu)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[えん]] (en)|kun readings=[[ふせる]] (fuseru), [[やすむ]] (yasumu)}}
 
 * '''Other info''':  
 
