Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <偐#1037629>

--- a/en/偐/偐.11104.wikitext
+++ b/en/偐/偐.11104.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[がん]] (gan), [[げん]] (gen)
-** '''[[Kun]]''': [[いつわる]] (itsuwaru), [[にせ]] (nise)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[がん]] (gan), [[げん]] (gen)|kun readings=[[いつわる]] (itsuwaru), [[にせ]] (nise)}}
 
 * '''Other info''':  
 
