--- a/en/偑/偑.11105.wikitext
+++ b/en/偑/偑.11105.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ふう]] (hū), [[ふ]] (fu)
-** '''[[Kun]]''': 
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ふう]] (hū), [[ふ]] (fu)|kun readings=}}
 
 * '''Other info''':  
 
