--- a/en/偒/偒.11106.wikitext
+++ b/en/偒/偒.11106.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[とう]] (tō)
-** '''[[Kun]]''': [[まつすぐ]] (matsusugu)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[とう]] (tō)|kun readings=[[まつすぐ]] (matsusugu)}}
 
 * '''Other info''':  
 
