--- a/en/偖/偖.11110.wikitext
+++ b/en/偖/偖.11110.wikitext
@@ -34,11 +34,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[しゃ]] (sha)
-** '''[[Kun]]''': [[さて]] (sate)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[しゃ]] (sha)|kun readings=[[さて]] (sate)}}
 
 * '''Other info''':  
 
