Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <偗#1037634>

--- a/en/偗/偗.11111.wikitext
+++ b/en/偗/偗.11111.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[せい]] (sei), [[しゃう]] (shau)
-** '''[[Kun]]''': [[まつすぐなさま]] (matsusugunasama)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[せい]] (sei), [[しゃう]] (shau)|kun readings=[[まつすぐなさま]] (matsusugunasama)}}
 
 * '''Other info''':  
 
