Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <停#1037638>

--- a/en/停/停.11116.wikitext
+++ b/en/停/停.11116.wikitext
@@ -35,11 +35,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[てい]] (tei), [[ちょう]] (chō), [[じょう]] (jō)
-** '''[[Kun]]''': [[とどまる]] (todomaru)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[てい]] (tei), [[ちょう]] (chō), [[じょう]] (jō)|kun readings=[[とどまる]] (todomaru)}}
 
 * '''Other info''':  
 
