--- a/en/偟/偟.11119.wikitext
+++ b/en/偟/偟.11119.wikitext
@@ -33,11 +33,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[こう]] (kō), [[おう]] (ō)
-** '''[[Kun]]''': [[たたずむ]] (tatazumu), [[さまよふ]] (samayofu), [[たちもとほる]] (tachimotohoru), [[いとま]] (itoma)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[こう]] (kō), [[おう]] (ō)|kun readings=[[たたずむ]] (tatazumu), [[さまよふ]] (samayofu), [[たちもとほる]] (tachimotohoru), [[いとま]] (itoma)}}
 
 * '''Other info''':  
 
