Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <偡#1037643>

--- a/en/偡/偡.11121.wikitext
+++ b/en/偡/偡.11121.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[たん]] (tan), [[だ]] (da)
-** '''[[Kun]]''': [[そろってすすむ]] (sorottesusumu), [[ととのったさま]] (totonottasama)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[たん]] (tan), [[だ]] (da)|kun readings=[[そろってすすむ]] (sorottesusumu), [[ととのったさま]] (totonottasama)}}
 
 * '''Other info''':  
 
