--- a/en/偠/偠.11120.wikitext
+++ b/en/偠/偠.11120.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[よう]] (yō)
-** '''[[Kun]]''': [[しなやか]] (shinayaka), [[たおやか]] (taoyaka)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[よう]] (yō)|kun readings=[[しなやか]] (shinayaka), [[たおやか]] (taoyaka)}}
 
 * '''Other info''':  
 
