Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <偨#1037649>

--- a/en/偨/偨.11128.wikitext
+++ b/en/偨/偨.11128.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[し]] (shi)
-** '''[[Kun]]''': [[そろわない]] (sorowanai)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[し]] (shi)|kun readings=[[そろわない]] (sorowanai)}}
 
 * '''Other info''':  
 
