Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <偩#1037650>

--- a/en/偩/偩.11129.wikitext
+++ b/en/偩/偩.11129.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ふう]] (hū), [[ぶ]] (bu)
-** '''[[Kun]]''': [[よりかたどる]] (yorikatadoru), [[たのむ]] (tanomu)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ふう]] (hū), [[ぶ]] (bu)|kun readings=[[よりかたどる]] (yorikatadoru), [[たのむ]] (tanomu)}}
 
 * '''Other info''':  
 
