--- a/en/偬/偬.11132.wikitext
+++ b/en/偬/偬.11132.wikitext
@@ -35,11 +35,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[そう]] (sō)
-** '''[[Kun]]''': [[くるしむ]] (kurushimu), [[せわしい]] (sewashii), [[あわただしい]] (awatadashii)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[そう]] (sō)|kun readings=[[くるしむ]] (kurushimu), [[せわしい]] (sewashii), [[あわただしい]] (awatadashii)}}
 
 * '''Other info''':  
 
