Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <偭#1037653>

--- a/en/偭/偭.11133.wikitext
+++ b/en/偭/偭.11133.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[べん]] (ben), [[めん]] (men)
-** '''[[Kun]]''': [[むかう]] (mukau), [[そむく]] (somuku), [[かなう]] (kanau)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[べん]] (ben), [[めん]] (men)|kun readings=[[むかう]] (mukau), [[そむく]] (somuku), [[かなう]] (kanau)}}
 
 * '''Other info''':  
 
