Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <偯#1037655>

--- a/en/偯/偯.11135.wikitext
+++ b/en/偯/偯.11135.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[い]] (i), [[え]] (e)
-** '''[[Kun]]''': [[なげく]] (nageku)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[い]] (i), [[え]] (e)|kun readings=[[なげく]] (nageku)}}
 
 * '''Other info''':  
 
