--- a/en/偮/偮.11134.wikitext
+++ b/en/偮/偮.11134.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[しゅう]] (shū)
-** '''[[Kun]]''': 
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[しゅう]] (shū)|kun readings=}}
 
 * '''Other info''':  
 
