Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <偱#1037657>

--- a/en/偱/偱.11137.wikitext
+++ b/en/偱/偱.11137.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[しゅん]] (shun)
-** '''[[Kun]]''': [[のべる]] (noberu)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[しゅん]] (shun)|kun readings=[[のべる]] (noberu)}}
 
 * '''Other info''':  
 
