Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <偷#1037661>

--- a/en/偷/偷.11143.wikitext
+++ b/en/偷/偷.11143.wikitext
@@ -32,11 +32,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ちゅう]] (chū), [[とう]] (tō)
-** '''[[Kun]]''': [[ぬすむ]] (nusumu)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ちゅう]] (chū), [[とう]] (tō)|kun readings=[[ぬすむ]] (nusumu)}}
 
 * '''Other info''':  
 
