--- a/en/偸/偸.11144.wikitext
+++ b/en/偸/偸.11144.wikitext
@@ -32,11 +32,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ちゅう]] (chū), [[とう]] (tō)
-** '''[[Kun]]''': [[ぬすむ]] (nusumu)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ちゅう]] (chū), [[とう]] (tō)|kun readings=[[ぬすむ]] (nusumu)}}
 
 * '''Other info''':  
 
