--- a/en/傁/傁.11153.wikitext
+++ b/en/傁/傁.11153.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[そう]] (sō), [[す]] (su)
-** '''[[Kun]]''': [[おきな]] (okina)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[そう]] (sō), [[す]] (su)|kun readings=[[おきな]] (okina)}}
 
 * '''Other info''':  
 
