--- a/en/傂/傂.11154.wikitext
+++ b/en/傂/傂.11154.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ち]] (chi), [[じ]] (ji), [[し]] (shi)
-** '''[[Kun]]''': [[かたたがい]] (katatagai), [[ひとしくない]] (hitoshikunai)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ち]] (chi), [[じ]] (ji), [[し]] (shi)|kun readings=[[かたたがい]] (katatagai), [[ひとしくない]] (hitoshikunai)}}
 
 * '''Other info''':  
 
