--- a/en/傃/傃.11155.wikitext
+++ b/en/傃/傃.11155.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[そ]] (so)
-** '''[[Kun]]''': [[むかう]] (mukau), [[まもる]] (mamoru)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[そ]] (so)|kun readings=[[むかう]] (mukau), [[まもる]] (mamoru)}}
 
 * '''Other info''':  
 
