--- a/en/傄/傄.11156.wikitext
+++ b/en/傄/傄.11156.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[かつ]] (katsu), [[けち]] (kechi)
-** '''[[Kun]]''': [[すこやかなさま]] (sukoyakanasama)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[かつ]] (katsu), [[けち]] (kechi)|kun readings=[[すこやかなさま]] (sukoyakanasama)}}
 
 * '''Other info''':  
 
