--- a/en/傊/傊.11162.wikitext
+++ b/en/傊/傊.11162.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[いん]] (in)
-** '''[[Kun]]''': [[まさる]] (masaru), [[ゆたか]] (yutaka)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[いん]] (in)|kun readings=[[まさる]] (masaru), [[ゆたか]] (yutaka)}}
 
 * '''Other info''':  
 
