--- a/en/傔/傔.11174.wikitext
+++ b/en/傔/傔.11174.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[けん]] (ken)
-** '''[[Kun]]''': [[したがう]] (shitagau), [[はべる]] (haberu), [[つかえる]] (tsukaeru)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[けん]] (ken)|kun readings=[[したがう]] (shitagau), [[はべる]] (haberu), [[つかえる]] (tsukaeru)}}
 
 * '''Other info''':  
 
