--- a/en/傓/傓.11173.wikitext
+++ b/en/傓/傓.11173.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[せん]] (sen)
-** '''[[Kun]]''': [[さかん]] (sakan)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[せん]] (sen)|kun readings=[[さかん]] (sakan)}}
 
 * '''Other info''':  
 
