Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <備#1037684>

--- a/en/備/備.11180.wikitext
+++ b/en/備/備.11180.wikitext
@@ -35,11 +35,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[び]] (bi)
-** '''[[Kun]]''': [[そなえる]] (sonaeru), [[そなわる]] (sonawaru), [[そなえ]] (sonae)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[び]] (bi)|kun readings=[[そなえる]] (sonaeru), [[そなわる]] (sonawaru), [[そなえ]] (sonae)}}
 
 * '''Other info''':  
 
