--- a/en/傛/傛.11182.wikitext
+++ b/en/傛/傛.11182.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[よう]] (yō), [[ゆ]] (yu)
-** '''[[Kun]]''': [[かがむ]] (kagamu)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[よう]] (yō), [[ゆ]] (yu)|kun readings=[[かがむ]] (kagamu)}}
 
 * '''Other info''':  
 
