--- a/en/圳/圳.12981.wikitext
+++ b/en/圳/圳.12981.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[しう]] (shiu), [[しゅ]] (shu), [[しん]] (shin), [[そん]] (son), [[しゅん]] (shun)
-** '''[[Kun]]''': [[みぞ]] (mizo)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[しう]] (shiu), [[しゅ]] (shu), [[しん]] (shin), [[そん]] (son), [[しゅん]] (shun)|kun readings=[[みぞ]] (mizo)}}
 
 * '''Other info''':  
 
