--- a/en/圴/圴.12982.wikitext
+++ b/en/圴/圴.12982.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[しゃく]] (shaku), [[さく]] (saku)
-** '''[[Kun]]''': [[あと]] (ato)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[しゃく]] (shaku), [[さく]] (saku)|kun readings=[[あと]] (ato)}}
 
 * '''Other info''':  
 
