Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <圦#1038893>

--- a/en/圦/圦.12989.wikitext
+++ b/en/圦/圦.12989.wikitext
@@ -14,11 +14,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': 
-** '''[[Kun]]''': [[いり]] (iri)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=|kun readings=[[いり]] (iri)}}
 
 * '''Other info''':  
 
