--- a/en/圿/圿.12994.wikitext
+++ b/en/圿/圿.12994.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[かつ]] (katsu), [[けち]] (kechi)
-** '''[[Kun]]''': [[あか]] (aka), [[ちり]] (chiri)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[かつ]] (katsu), [[けち]] (kechi)|kun readings=[[あか]] (aka), [[ちり]] (chiri)}}
 
 * '''Other info''':  
 
