Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <址#1038898>

--- a/en/址/址.12995.wikitext
+++ b/en/址/址.12995.wikitext
@@ -34,11 +34,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[し]] (shi)
-** '''[[Kun]]''': [[あと]] (ato)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[し]] (shi)|kun readings=[[あと]] (ato)}}
 
 * '''Other info''':  
 
