--- a/en/坁/坁.12996.wikitext
+++ b/en/坁/坁.12996.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[し]] (shi)
-** '''[[Kun]]''': [[とまる]] (tomaru), [[さか]] (saka)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[し]] (shi)|kun readings=[[とまる]] (tomaru), [[さか]] (saka)}}
 
 * '''Other info''':  
 
