--- a/en/坅/坅.13000.wikitext
+++ b/en/坅/坅.13000.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[きん]] (kin), [[こん]] (kon), [[ぎん]] (gin), [[ごん]] (gon), [[さん]] (san)
-** '''[[Kun]]''': [[あな]] (ana)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[きん]] (kin), [[こん]] (kon), [[ぎん]] (gin), [[ごん]] (gon), [[さん]] (san)|kun readings=[[あな]] (ana)}}
 
 * '''Other info''':  
 
