--- a/en/坂/坂.12997.wikitext
+++ b/en/坂/坂.12997.wikitext
@@ -35,11 +35,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[はん]] (han)
-** '''[[Kun]]''': [[さか]] (saka)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[はん]] (han)|kun readings=[[さか]] (saka)}}
 
 * '''Other info''':  
 
