Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <均#1038903>

--- a/en/均/均.13002.wikitext
+++ b/en/均/均.13002.wikitext
@@ -33,11 +33,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[きん]] (kin), [[いん]] (in)
-** '''[[Kun]]''': [[ととのえる]] (totonoeru), [[ひとしい]] (hitoshii)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[きん]] (kin), [[いん]] (in)|kun readings=[[ととのえる]] (totonoeru), [[ひとしい]] (hitoshii)}}
 
 * '''Other info''':  
 
