--- a/en/坆/坆.13001.wikitext
+++ b/en/坆/坆.13001.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ばい]] (bai), [[ふん]] (fun)
-** '''[[Kun]]''': [[はか]] (haka)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ばい]] (bai), [[ふん]] (fun)|kun readings=[[はか]] (haka)}}
 
 * '''Other info''':  
 
