Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <坉#1038904>

--- a/en/坉/坉.13004.wikitext
+++ b/en/坉/坉.13004.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[とん]] (ton), [[どん]] (don)
-** '''[[Kun]]''': [[ふさぐ]] (fusagu), [[きずく]] (kizuku), [[うね]] (une), [[ふさがる]] (fusagaru)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[とん]] (ton), [[どん]] (don)|kun readings=[[ふさぐ]] (fusagu), [[きずく]] (kizuku), [[うね]] (une), [[ふさがる]] (fusagaru)}}
 
 * '''Other info''':  
 
