Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <坌#1038906>

--- a/en/坌/坌.13007.wikitext
+++ b/en/坌/坌.13007.wikitext
@@ -35,11 +35,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ほん]] (hon), [[ぼん]] (bon), [[ふん]] (fun)
-** '''[[Kun]]''': [[ちり]] (chiri), [[ならぶ]] (narabu), [[あつまる]] (atsumaru), [[わくさま]] (wakusama)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ほん]] (hon), [[ぼん]] (bon), [[ふん]] (fun)|kun readings=[[ちり]] (chiri), [[ならぶ]] (narabu), [[あつまる]] (atsumaru), [[わくさま]] (wakusama)}}
 
 * '''Other info''':  
 
