--- a/en/坎/坎.13009.wikitext
+++ b/en/坎/坎.13009.wikitext
@@ -34,11 +34,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[かん]] (kan)
-** '''[[Kun]]''': [[あな]] (ana)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[かん]] (kan)|kun readings=[[あな]] (ana)}}
 
 * '''Other info''':  
 
