Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <坒#1038910>

--- a/en/坒/坒.13013.wikitext
+++ b/en/坒/坒.13013.wikitext
@@ -34,11 +34,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ひ]] (hi), [[び]] (bi)
-** '''[[Kun]]''': [[きじはし]] (kijihashi)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ひ]] (hi), [[び]] (bi)|kun readings=[[きじはし]] (kijihashi)}}
 
 * '''Other info''':  
 
