Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <坐#1038909>

--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -36,11 +36,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ざ]] (za)
-** '''[[Kun]]''': [[すわる]] (suwaru), [[そぞろに]] (sozoroni), [[おわす]] (owasu)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ざ]] (za)|kun readings=[[すわる]] (suwaru), [[そぞろに]] (sozoroni), [[おわす]] (owasu)}}
 
 * '''Other info''':  
 
