--- a/en/块/块.13018.wikitext
+++ b/en/块/块.13018.wikitext
@@ -38,11 +38,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[かい]] (kai)
-** '''[[Kun]]''': 
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[かい]] (kai)|kun readings=}}
 
 * '''Other info''':  
 
