--- a/en/坡/坡.13028.wikitext
+++ b/en/坡/坡.13028.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[は]] (ha), [[ひ]] (hi)
-** '''[[Kun]]''': [[つつみ]] (tsutsumi)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[は]] (ha), [[ひ]] (hi)|kun readings=[[つつみ]] (tsutsumi)}}
 
 * '''Other info''':  
 
