--- a/en/坥/坥.13032.wikitext
+++ b/en/坥/坥.13032.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[しょ]] (sho)
-** '''[[Kun]]''': [[つつみ]] (tsutsumi)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[しょ]] (sho)|kun readings=[[つつみ]] (tsutsumi)}}
 
 * '''Other info''':  
 
