Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <坧#1038918>

--- a/en/坧/坧.13034.wikitext
+++ b/en/坧/坧.13034.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[せき]] (seki), [[しゃう]] (shau)
-** '''[[Kun]]''': [[どだい]] (dodai)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[せき]] (seki), [[しゃう]] (shau)|kun readings=[[どだい]] (dodai)}}
 
 * '''Other info''':  
 
