--- a/en/坩/坩.13036.wikitext
+++ b/en/坩/坩.13036.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[かん]] (kan)
-** '''[[Kun]]''': [[つぼ]] (tsubo)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[かん]] (kan)|kun readings=[[つぼ]] (tsubo)}}
 
 * '''Other info''':  
 
