--- a/en/坮/坮.13041.wikitext
+++ b/en/坮/坮.13041.wikitext
@@ -34,11 +34,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[だい]] (dai), [[たい]] (tai)
-** '''[[Kun]]''': [[うてな]] (utena), [[われ]] (ware)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[だい]] (dai), [[たい]] (tai)|kun readings=[[うてな]] (utena), [[われ]] (ware)}}
 
 * '''Other info''':  
 
