Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <坯#1038926>

--- a/en/坯/坯.13042.wikitext
+++ b/en/坯/坯.13042.wikitext
@@ -35,11 +35,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ひ]] (hi), [[はい]] (hai), [[へ]] (he)
-** '''[[Kun]]''': [[おか]] (oka)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ひ]] (hi), [[はい]] (hai), [[へ]] (he)|kun readings=[[おか]] (oka)}}
 
 * '''Other info''':  
 
