--- a/en/坱/坱.13044.wikitext
+++ b/en/坱/坱.13044.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[あう]] (au)
-** '''[[Kun]]''': [[ちり]] (chiri)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[あう]] (au)|kun readings=[[ちり]] (chiri)}}
 
 * '''Other info''':  
 
