--- a/en/坶/坶.13049.wikitext
+++ b/en/坶/坶.13049.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ぼく]] (boku), [[もく]] (moku)
-** '''[[Kun]]''': 
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ぼく]] (boku), [[もく]] (moku)|kun readings=}}
 
 * '''Other info''':  
 
