--- a/en/坺/坺.13053.wikitext
+++ b/en/坺/坺.13053.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[はつ]] (hatsu), [[はち]] (hachi), [[ぼち]] (bochi)
-** '''[[Kun]]''': [[ちりのさま]] (chirinosama)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[はつ]] (hatsu), [[はち]] (hachi), [[ぼち]] (bochi)|kun readings=[[ちりのさま]] (chirinosama)}}
 
 * '''Other info''':  
 
