Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <坼#1038938>

--- a/en/坼/坼.13055.wikitext
+++ b/en/坼/坼.13055.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[たく]] (taku), [[ちゃく]] (chaku)
-** '''[[Kun]]''': [[さける]] (sakeru), [[わかれる]] (wakareru), [[ひらく]] (hiraku), [[さけめ]] (sakeme)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[たく]] (taku), [[ちゃく]] (chaku)|kun readings=[[さける]] (sakeru), [[わかれる]] (wakareru), [[ひらく]] (hiraku), [[さけめ]] (sakeme)}}
 
 * '''Other info''':  
 
