--- a/en/垀/垀.13059.wikitext
+++ b/en/垀/垀.13059.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[こ]] (ko), [[く]] (ku)
-** '''[[Kun]]''': [[かまへ]] (kamahe), [[わずらはい]] (wazurahai)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[こ]] (ko), [[く]] (ku)|kun readings=[[かまへ]] (kamahe), [[わずらはい]] (wazurahai)}}
 
 * '''Other info''':  
 
