Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <坿#1038941>

--- a/en/坿/坿.13058.wikitext
+++ b/en/坿/坿.13058.wikitext
@@ -33,11 +33,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ふ]] (fu)
-** '''[[Kun]]''': [[つける]] (tsukeru), [[いかだ]] (ikada)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ふ]] (fu)|kun readings=[[つける]] (tsukeru), [[いかだ]] (ikada)}}
 
 * '''Other info''':  
 
