--- a/en/垌/垌.13071.wikitext
+++ b/en/垌/垌.13071.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[とう]] (tō), [[つ]] (tsu)
-** '''[[Kun]]''': [[つぼ]] (tsubo)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[とう]] (tō), [[つ]] (tsu)|kun readings=[[つぼ]] (tsubo)}}
 
 * '''Other info''':  
 
