Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <垐#1038948>

--- a/en/垐/垐.13076.wikitext
+++ b/en/垐/垐.13076.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[し]] (shi), [[じ]] (ji), [[しょう]] (shō), [[じき]] (jiki)
-** '''[[Kun]]''': [[にくむ]] (nikumu)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[し]] (shi), [[じ]] (ji), [[しょう]] (shō), [[じき]] (jiki)|kun readings=[[にくむ]] (nikumu)}}
 
 * '''Other info''':  
 
