Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <垓#1038949>

--- a/en/垓/垓.13079.wikitext
+++ b/en/垓/垓.13079.wikitext
@@ -35,11 +35,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[がい]] (gai), [[かい]] (kai)
-** '''[[Kun]]''': [[はて]] (hate), [[さかい]] (sakai)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[がい]] (gai), [[かい]] (kai)|kun readings=[[はて]] (hate), [[さかい]] (sakai)}}
 
 * '''Other info''':  
 
