--- a/en/垕/垕.13081.wikitext
+++ b/en/垕/垕.13081.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[こう]] (kō)
-** '''[[Kun]]''': [[あか]] (aka)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[こう]] (kō)|kun readings=[[あか]] (aka)}}
 
 * '''Other info''':  
 
