--- a/en/垗/垗.13083.wikitext
+++ b/en/垗/垗.13083.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ちょう]] (chō), [[じょう]] (jō)
-** '''[[Kun]]''': [[はいりどころ]] (hauridokoro)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ちょう]] (chō), [[じょう]] (jō)|kun readings=[[はいりどころ]] (hauridokoro)}}
 
 * '''Other info''':  
 
