--- a/en/垞/垞.13090.wikitext
+++ b/en/垞/垞.13090.wikitext
@@ -34,11 +34,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[た]] (ta), [[だ]] (da)
-** '''[[Kun]]''': 
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[た]] (ta), [[だ]] (da)|kun readings=}}
 
 * '''Other info''':  
 
