Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <垡#1038962>

--- a/en/垡/垡.13093.wikitext
+++ b/en/垡/垡.13093.wikitext
@@ -33,11 +33,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[はつ]] (hatsu), [[ぼち]] (bochi)
-** '''[[Kun]]''': [[たがやす]] (tagayasu)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[はつ]] (hatsu), [[ぼち]] (bochi)|kun readings=[[たがやす]] (tagayasu)}}
 
 * '''Other info''':  
 
