--- a/en/垣/垣.13095.wikitext
+++ b/en/垣/垣.13095.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[えん]] (en)
-** '''[[Kun]]''': [[かき]] (kaki)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[えん]] (en)|kun readings=[[かき]] (kaki)}}
 
 * '''Other info''':  
 
