Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <垤#1038964>

--- a/en/垤/垤.13096.wikitext
+++ b/en/垤/垤.13096.wikitext
@@ -33,11 +33,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[てつ]] (tetsu)
-** '''[[Kun]]''': [[ありずか]] (arizuka)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[てつ]] (tetsu)|kun readings=[[ありずか]] (arizuka)}}
 
 * '''Other info''':  
 
