--- a/en/垧/垧.13099.wikitext
+++ b/en/垧/垧.13099.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[けい]] (kei), [[きょう]] (kyō)
-** '''[[Kun]]''': 
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[けい]] (kei), [[きょう]] (kyō)|kun readings=}}
 
 * '''Other info''':  
 
