Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <惧#1040528>

--- a/en/惧/惧.15612.wikitext
+++ b/en/惧/惧.15612.wikitext
@@ -35,11 +35,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[く]] (ku), [[ぐ]] (gu)
-** '''[[Kun]]''': [[おそれる]] (osoreru)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[く]] (ku), [[ぐ]] (gu)|kun readings=[[おそれる]] (osoreru)}}
 
 * '''Other info''':  
 
