Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <惨#1040529>

--- a/en/惨/惨.15613.wikitext
+++ b/en/惨/惨.15613.wikitext
@@ -38,11 +38,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[さん]] (san), [[ざん]] (zan)
-** '''[[Kun]]''': [[みじめ]] (mijime), [[いたむ]] (itamu)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[さん]] (san), [[ざん]] (zan)|kun readings=[[みじめ]] (mijime), [[いたむ]] (itamu)}}
 
 * '''Other info''':  
 
