--- a/en/惵/惵.15626.wikitext
+++ b/en/惵/惵.15626.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ちょう]] (chō), [[じょう]] (jō), [[きょう]] (kyō)
-** '''[[Kun]]''': [[やすらか]] (yasuraka)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ちょう]] (chō), [[じょう]] (jō), [[きょう]] (kyō)|kun readings=[[やすらか]] (yasuraka)}}
 
 * '''Other info''':  
 
