Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <惹#1040538>

--- a/en/惹/惹.15629.wikitext
+++ b/en/惹/惹.15629.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[じゃ]] (ja), [[じゃく]] (jaku)
-** '''[[Kun]]''': [[ひく]] (hiku)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[じゃ]] (ja), [[じゃく]] (jaku)|kun readings=[[ひく]] (hiku)}}
 
 * '''Other info''':  
 
