--- a/en/惻/惻.15631.wikitext
+++ b/en/惻/惻.15631.wikitext
@@ -35,11 +35,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[そく]] (soku), [[しょく]] (shoku)
-** '''[[Kun]]''': [[いたむ]] (itamu)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[そく]] (soku), [[しょく]] (shoku)|kun readings=[[いたむ]] (itamu)}}
 
 * '''Other info''':  
 
