--- a/en/惺/惺.15630.wikitext
+++ b/en/惺/惺.15630.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[せい]] (sei)
-** '''[[Kun]]''': [[さとる]] (satoru)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[せい]] (sei)|kun readings=[[さとる]] (satoru)}}
 
 * '''Other info''':  
 
