Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <愀#1040541>

--- a/en/愀/愀.15636.wikitext
+++ b/en/愀/愀.15636.wikitext
@@ -33,11 +33,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[しょう]] (shō), [[しゅう]] (shū)
-** '''[[Kun]]''': [[うれえる]] (ureeru), [[さびしい]] (sabishii)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[しょう]] (shō), [[しゅう]] (shū)|kun readings=[[うれえる]] (ureeru), [[さびしい]] (sabishii)}}
 
 * '''Other info''':  
 
