--- a/en/愂/愂.15638.wikitext
+++ b/en/愂/愂.15638.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ぼつ]] (botsu), [[はい]] (hai)
-** '''[[Kun]]''': [[もとる]] (motoru)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ぼつ]] (botsu), [[はい]] (hai)|kun readings=[[もとる]] (motoru)}}
 
 * '''Other info''':  
 
