--- a/en/愃/愃.15639.wikitext
+++ b/en/愃/愃.15639.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[けん]] (ken), [[せん]] (sen), [[かん]] (kan)
-** '''[[Kun]]''': [[ゆたか]] (yutaka), [[こころよい]] (kokoroyoi), [[わすれる]] (wasureru)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[けん]] (ken), [[せん]] (sen), [[かん]] (kan)|kun readings=[[ゆたか]] (yutaka), [[こころよい]] (kokoroyoi), [[わすれる]] (wasureru)}}
 
 * '''Other info''':  
 
