--- a/en/愆/愆.15642.wikitext
+++ b/en/愆/愆.15642.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[けん]] (ken)
-** '''[[Kun]]''': [[あやまる]] (ayamaru)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[けん]] (ken)|kun readings=[[あやまる]] (ayamaru)}}
 
 * '''Other info''':  
 
