Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <愊#1040548>

--- a/en/愊/愊.15646.wikitext
+++ b/en/愊/愊.15646.wikitext
@@ -33,11 +33,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ひょく]] (hyoku), [[ひき]] (hiki), [[ふく]] (fuku)
-** '''[[Kun]]''': [[まこと]] (makoto)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ひょく]] (hyoku), [[ひき]] (hiki), [[ふく]] (fuku)|kun readings=[[まこと]] (makoto)}}
 
 * '''Other info''':  
 
