--- a/en/愌/愌.15648.wikitext
+++ b/en/愌/愌.15648.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[かん]] (kan), [[がん]] (gan)
-** '''[[Kun]]''': [[はびこる]] (habikoru)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[かん]] (kan), [[がん]] (gan)|kun readings=[[はびこる]] (habikoru)}}
 
 * '''Other info''':  
 
