--- a/en/愑/愑.15653.wikitext
+++ b/en/愑/愑.15653.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[よう]] (yō), [[ゆ]] (yu)
-** '''[[Kun]]''': [[みつる]] (mitsuru), [[いかる]] (ikaru)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[よう]] (yō), [[ゆ]] (yu)|kun readings=[[みつる]] (mitsuru), [[いかる]] (ikaru)}}
 
 * '''Other info''':  
 
