Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <愓#1040554>

--- a/en/愓/愓.15655.wikitext
+++ b/en/愓/愓.15655.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[とう]] (tō), [[どう]] (dō), [[しょう]] (shō), [[よう]] (yō)
-** '''[[Kun]]''': [[ほしいまま]] (hoshiimama)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[とう]] (tō), [[どう]] (dō), [[しょう]] (shō), [[よう]] (yō)|kun readings=[[ほしいまま]] (hoshiimama)}}
 
 * '''Other info''':  
 
