--- a/en/愗/愗.15659.wikitext
+++ b/en/愗/愗.15659.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ぼう]] (bō), [[も]] (mo)
-** '''[[Kun]]''': [[おろか]] (oroka), [[やぶさか]] (yabusaka)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ぼう]] (bō), [[も]] (mo)|kun readings=[[おろか]] (oroka), [[やぶさか]] (yabusaka)}}
 
 * '''Other info''':  
 
