--- a/en/愖/愖.15658.wikitext
+++ b/en/愖/愖.15658.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[しん]] (shin), [[じん]] (jin), [[たん]] (tan), [[とん]] (ton)
-** '''[[Kun]]''': [[まこと]] (makoto), [[たのしむ]] (tanoshimu)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[しん]] (shin), [[じん]] (jin), [[たん]] (tan), [[とん]] (ton)|kun readings=[[まこと]] (makoto), [[たのしむ]] (tanoshimu)}}
 
 * '''Other info''':  
 
