--- a/en/愚/愚.15662.wikitext
+++ b/en/愚/愚.15662.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ぐ]] (gu)
-** '''[[Kun]]''': [[おろか]] (oroka)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ぐ]] (gu)|kun readings=[[おろか]] (oroka)}}
 
 * '''Other info''':  
 
