--- a/en/愜/愜.15663.wikitext
+++ b/en/愜/愜.15663.wikitext
@@ -35,11 +35,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[きょう]] (kyō)
-** '''[[Kun]]''': [[こころよい]] (kokoroyoi)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[きょう]] (kyō)|kun readings=[[こころよい]] (kokoroyoi)}}
 
 * '''Other info''':  
 
