--- a/en/愞/愞.15665.wikitext
+++ b/en/愞/愞.15665.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ぜん]] (zen), [[ねん]] (nen), [[た]] (ta), [[な]] (na)
-** '''[[Kun]]''': [[よわい]] (yowai), [[おそれる]] (osoreru)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ぜん]] (zen), [[ねん]] (nen), [[た]] (ta), [[な]] (na)|kun readings=[[よわい]] (yowai), [[おそれる]] (osoreru)}}
 
 * '''Other info''':  
 
