--- a/en/愫/愫.15678.wikitext
+++ b/en/愫/愫.15678.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[そ]] (so)
-** '''[[Kun]]''': [[まこと]] (makoto)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[そ]] (so)|kun readings=[[まこと]] (makoto)}}
 
 * '''Other info''':  
 
