Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <愪#1040566>

--- a/en/愪/愪.15677.wikitext
+++ b/en/愪/愪.15677.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[うん]] (un), [[いん]] (in)
-** '''[[Kun]]''': [[うれえるさま]] (ureerusama), [[うごく]] (ugoku), [[うれえる]] (ureeru)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[うん]] (un), [[いん]] (in)|kun readings=[[うれえるさま]] (ureerusama), [[うごく]] (ugoku), [[うれえる]] (ureeru)}}
 
 * '''Other info''':  
 
