--- a/en/愰/愰.15683.wikitext
+++ b/en/愰/愰.15683.wikitext
@@ -34,11 +34,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[こう]] (kō), [[おう]] (ō)
-** '''[[Kun]]''': [[さとい]] (satoi)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[こう]] (kō), [[おう]] (ō)|kun readings=[[さとい]] (satoi)}}
 
 * '''Other info''':  
 
