--- a/en/愱/愱.15684.wikitext
+++ b/en/愱/愱.15684.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[しつ]] (shitsu), [[しち]] (shichi)
-** '''[[Kun]]''': [[くるしむ]] (kurushimu)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[しつ]] (shitsu), [[しち]] (shichi)|kun readings=[[くるしむ]] (kurushimu)}}
 
 * '''Other info''':  
 
