Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <愵#1040571>

--- a/en/愵/愵.15688.wikitext
+++ b/en/愵/愵.15688.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[でき]] (deki), [[にゃく]] (nyaku)
-** '''[[Kun]]''': [[うれえるさま]] (ureerusama)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[でき]] (deki), [[にゃく]] (nyaku)|kun readings=[[うれえるさま]] (ureerusama)}}
 
 * '''Other info''':  
 
