--- a/en/愷/愷.15690.wikitext
+++ b/en/愷/愷.15690.wikitext
@@ -35,11 +35,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[かい]] (kai), [[がい]] (gai)
-** '''[[Kun]]''': [[たのしむ]] (tanoshimu)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[かい]] (kai), [[がい]] (gai)|kun readings=[[たのしむ]] (tanoshimu)}}
 
 * '''Other info''':  
 
