--- a/en/愶/愶.15689.wikitext
+++ b/en/愶/愶.15689.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[きょう]] (kyō), [[こう]] (kō)
-** '''[[Kun]]''': [[おびやかす]] (obiyakasu)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[きょう]] (kyō), [[こう]] (kō)|kun readings=[[おびやかす]] (obiyakasu)}}
 
 * '''Other info''':  
 
