--- a/en/愹/愹.15692.wikitext
+++ b/en/愹/愹.15692.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[よう]] (yō)
-** '''[[Kun]]''': [[いかる]] (ikaru), [[よろこぶ]] (yorokobu), [[みちる]] (michiru)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[よう]] (yō)|kun readings=[[いかる]] (ikaru), [[よろこぶ]] (yorokobu), [[みちる]] (michiru)}}
 
 * '''Other info''':  
 
