Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <愽#1040576>

--- a/en/愽/愽.15696.wikitext
+++ b/en/愽/愽.15696.wikitext
@@ -35,11 +35,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[はく]] (haku)
-** '''[[Kun]]''': [[ひろい]] (hiroi), [[ひろめる]] (hiromeru)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[はく]] (haku)|kun readings=[[ひろい]] (hiroi), [[ひろめる]] (hiromeru)}}
 
 * '''Other info''':  
 
