Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <慄#1040580>

--- a/en/慄/慄.15703.wikitext
+++ b/en/慄/慄.15703.wikitext
@@ -39,11 +39,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[りつ]] (ritsu)
-** '''[[Kun]]''': [[おそれる]] (osoreru), [[おののく]] (ononoku)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[りつ]] (ritsu)|kun readings=[[おそれる]] (osoreru), [[おののく]] (ononoku)}}
 
 * '''Other info''':  
 
