--- a/en/慅/慅.15704.wikitext
+++ b/en/慅/慅.15704.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[そう]] (sō), [[しょう]] (shō)
-** '''[[Kun]]''': [[うごく]] (ugoku)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[そう]] (sō), [[しょう]] (shō)|kun readings=[[うごく]] (ugoku)}}
 
 * '''Other info''':  
 
