--- a/en/慆/慆.15705.wikitext
+++ b/en/慆/慆.15705.wikitext
@@ -33,11 +33,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[とう]] (tō)
-** '''[[Kun]]''': [[よろこぶ]] (yorokobu)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[とう]] (tō)|kun readings=[[よろこぶ]] (yorokobu)}}
 
 * '''Other info''':  
 
