--- a/en/慌/慌.15711.wikitext
+++ b/en/慌/慌.15711.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[こう]] (kō)
-** '''[[Kun]]''': [[あわてる]] (awateru), [[あわただし]] (awatadashi), [[くらい]] (kurai)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[こう]] (kō)|kun readings=[[あわてる]] (awateru), [[あわただし]] (awatadashi), [[くらい]] (kurai)}}
 
 * '''Other info''':  
 
