--- a/en/慊/慊.15709.wikitext
+++ b/en/慊/慊.15709.wikitext
@@ -34,11 +34,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[けん]] (ken), [[きょう]] (kyō)
-** '''[[Kun]]''': [[うらむ]] (uramu), [[あきたりる]] (akitariru)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[けん]] (ken), [[きょう]] (kyō)|kun readings=[[うらむ]] (uramu), [[あきたりる]] (akitariru)}}
 
 * '''Other info''':  
 
