--- a/en/慓/慓.15719.wikitext
+++ b/en/慓/慓.15719.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ひょう]] (hyō)
-** '''[[Kun]]''': [[はやい]] (hayai), [[すばやい]] (subayai)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ひょう]] (hyō)|kun readings=[[はやい]] (hayai), [[すばやい]] (subayai)}}
 
 * '''Other info''':  
 
