--- a/en/慙/慙.15725.wikitext
+++ b/en/慙/慙.15725.wikitext
@@ -35,11 +35,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ざん]] (zan)
-** '''[[Kun]]''': [[はじる]] (hajiru), [[はじ]] (haji)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ざん]] (zan)|kun readings=[[はじる]] (hajiru), [[はじ]] (haji)}}
 
 * '''Other info''':  
 
