--- a/en/慘/慘.15724.wikitext
+++ b/en/慘/慘.15724.wikitext
@@ -38,11 +38,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[さん]] (san), [[ざん]] (zan)
-** '''[[Kun]]''': [[みじめ]] (mijime)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[さん]] (san), [[ざん]] (zan)|kun readings=[[みじめ]] (mijime)}}
 
 * '''Other info''':  
 
