--- a/en/慚/慚.15726.wikitext
+++ b/en/慚/慚.15726.wikitext
@@ -38,11 +38,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ざん]] (zan)
-** '''[[Kun]]''': [[はじる]] (hajiru), [[はじ]] (haji)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ざん]] (zan)|kun readings=[[はじる]] (hajiru), [[はじ]] (haji)}}
 
 * '''Other info''':  
 
