--- a/en/慝/慝.15729.wikitext
+++ b/en/慝/慝.15729.wikitext
@@ -33,11 +33,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[とく]] (toku)
-** '''[[Kun]]''': [[わるい]] (warui)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[とく]] (toku)|kun readings=[[わるい]] (warui)}}
 
 * '''Other info''':  
 
