Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <旣#1041214>

--- a/en/旣/旣.16908.wikitext
+++ b/en/旣/旣.16908.wikitext
@@ -35,11 +35,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[き]] (ki)
-** '''[[Kun]]''': [[つきる]] (tsukiru), [[すでに]] (sudeni)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[き]] (ki)|kun readings=[[つきる]] (tsukiru), [[すでに]] (sudeni)}}
 
 * '''Other info''':  
 
