--- a/en/旬/旬.16916.wikitext
+++ b/en/旬/旬.16916.wikitext
@@ -33,11 +33,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[じゅん]] (jun), [[しゅん]] (shun)
-** '''[[Kun]]''': [[あまねく]] (amaneku)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[じゅん]] (jun), [[しゅん]] (shun)|kun readings=[[あまねく]] (amaneku)}}
 
 * '''Other info''':  
 
