Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <旭#1041219>

--- a/en/旭/旭.16917.wikitext
+++ b/en/旭/旭.16917.wikitext
@@ -36,11 +36,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[きょく]] (kyoku)
-** '''[[Kun]]''': [[あさひ]] (asahi)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[きょく]] (kyoku)|kun readings=[[あさひ]] (asahi)}}
 
 * '''Other info''':  
 
