Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <旴#1041221>

--- a/en/旴/旴.16924.wikitext
+++ b/en/旴/旴.16924.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[く]] (ku)
-** '''[[Kun]]''': [[あさ]] (asa)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[く]] (ku)|kun readings=[[あさ]] (asa)}}
 
 * '''Other info''':  
 
