--- a/en/旺/旺.16930.wikitext
+++ b/en/旺/旺.16930.wikitext
@@ -34,11 +34,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[おう]] (ō)
-** '''[[Kun]]''': [[さかん]] (sakan)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[おう]] (ō)|kun readings=[[さかん]] (sakan)}}
 
 * '''Other info''':  
 
