--- a/en/旾/旾.16934.wikitext
+++ b/en/旾/旾.16934.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[しゅん]] (shun)
-** '''[[Kun]]''': [[はる]] (haru)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[しゅん]] (shun)|kun readings=[[はる]] (haru)}}
 
 * '''Other info''':  
 
