--- a/en/旿/旿.16935.wikitext
+++ b/en/旿/旿.16935.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ご]] (go)
-** '''[[Kun]]''': [[あきらか]] (akiraka)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ご]] (go)|kun readings=[[あきらか]] (akiraka)}}
 
 * '''Other info''':  
 
