Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <昆#1041231>

--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -33,11 +33,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[こん]] (kon)
-** '''[[Kun]]''': [[あに]] (ani)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[こん]] (kon)|kun readings=[[あに]] (ani)}}
 
 * '''Other info''':  
 
