--- a/en/昊/昊.16946.wikitext
+++ b/en/昊/昊.16946.wikitext
@@ -34,11 +34,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[こう]] (kō)
-** '''[[Kun]]''': [[そら]] (sora)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[こう]] (kō)|kun readings=[[そら]] (sora)}}
 
 * '''Other info''':  
 
