--- a/en/昍/昍.16949.wikitext
+++ b/en/昍/昍.16949.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[けん]] (ken), [[かん]] (kan)
-** '''[[Kun]]''': [[あきらか]] (akiraka)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[けん]] (ken), [[かん]] (kan)|kun readings=[[あきらか]] (akiraka)}}
 
 * '''Other info''':  
 
