--- a/en/昑/昑.16953.wikitext
+++ b/en/昑/昑.16953.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[きん]] (kin)
-** '''[[Kun]]''': [[あきらか]] (akiraka)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[きん]] (kin)|kun readings=[[あきらか]] (akiraka)}}
 
 * '''Other info''':  
 
