--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -34,11 +34,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[せき]] (seki), [[しゃく]] (shaku)
-** '''[[Kun]]''': [[むかし]] (mukashi)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[せき]] (seki), [[しゃく]] (shaku)|kun readings=[[むかし]] (mukashi)}}
 
 * '''Other info''':  
 
