--- a/en/昖/昖.16958.wikitext
+++ b/en/昖/昖.16958.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[えん]] (en)
-** '''[[Kun]]''': [[めぐる]] (meguru)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[えん]] (en)|kun readings=[[めぐる]] (meguru)}}
 
 * '''Other info''':  
 
