--- a/en/昞/昞.16966.wikitext
+++ b/en/昞/昞.16966.wikitext
@@ -33,11 +33,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[へい]] (hei), [[ひょう]] (hyō), [[ほう]] (hō)
-** '''[[Kun]]''': [[あきらか]] (akiraka)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[へい]] (hei), [[ひょう]] (hyō), [[ほう]] (hō)|kun readings=[[あきらか]] (akiraka)}}
 
 * '''Other info''':  
 
