--- a/en/昡/昡.16969.wikitext
+++ b/en/昡/昡.16969.wikitext
@@ -34,11 +34,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[けん]] (ken), [[げん]] (gen)
-** '''[[Kun]]''': 
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[けん]] (ken), [[げん]] (gen)|kun readings=}}
 
 * '''Other info''':  
 
