--- a/en/昣/昣.16971.wikitext
+++ b/en/昣/昣.16971.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[しん]] (shin)
-** '''[[Kun]]''': [[あきらか]] (akiraka)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[しん]] (shin)|kun readings=[[あきらか]] (akiraka)}}
 
 * '''Other info''':  
 
