--- a/en/昦/昦.16974.wikitext
+++ b/en/昦/昦.16974.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[こう]] (kō)
-** '''[[Kun]]''': [[そら]] (sora)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[こう]] (kō)|kun readings=[[そら]] (sora)}}
 
 * '''Other info''':  
 
