--- a/en/昩/昩.16977.wikitext
+++ b/en/昩/昩.16977.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ばつ]] (batsu), [[まち]] (machi)
-** '''[[Kun]]''': [[くもる]] (kumoru), [[ほし]] (hoshi)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ばつ]] (batsu), [[まち]] (machi)|kun readings=[[くもる]] (kumoru), [[ほし]] (hoshi)}}
 
 * '''Other info''':  
 
