--- a/en/昫/昫.16979.wikitext
+++ b/en/昫/昫.16979.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[く]] (ku), [[きょう]] (kyō)
-** '''[[Kun]]''': [[あたたか]] (atataka)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[く]] (ku), [[きょう]] (kyō)|kun readings=[[あたたか]] (atataka)}}
 
 * '''Other info''':  
 
