Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <昭#1041257>

--- a/en/昭/昭.16981.wikitext
+++ b/en/昭/昭.16981.wikitext
@@ -33,11 +33,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[しょう]] (shō)
-** '''[[Kun]]''': [[あきらか]] (akiraka)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[しょう]] (shō)|kun readings=[[あきらか]] (akiraka)}}
 
 * '''Other info''':  
 
