Robot: Automated text replacement  (-== *\[*Japanese]* +\[*Kanji]* *== *[\r\n]+\* '''Readings'''[\r\n]+\*\* '''\[\[On]]''': (?P<onReading>.*)[\r\n]+\*\* '''\[\[Kun]]''': (?P<kunReading>.*) +==Japanese==\n===[[Kanji]]===\n{{kanji|on readings=\g<onRead <昷#1041263>

--- a/en/昷/昷.16992.wikitext
+++ b/en/昷/昷.16992.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[おん]] (on)
-** '''[[Kun]]''': [[めぐむ]] (megumu)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[おん]] (on)|kun readings=[[めぐむ]] (megumu)}}
 
 * '''Other info''':  
 
