--- a/en/昻/昻.16996.wikitext
+++ b/en/昻/昻.16996.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[こう]] (kō), [[ごう]] (gō)
-** '''[[Kun]]''': [[あがる]] (agaru), [[たかい]] (takai)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[こう]] (kō), [[ごう]] (gō)|kun readings=[[あがる]] (agaru), [[たかい]] (takai)}}
 
 * '''Other info''':  
 
