--- a/en/晀/晀.17001.wikitext
+++ b/en/晀/晀.17001.wikitext
@@ -30,11 +30,9 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ちょう]] (chō)
-** '''[[Kun]]''': [[あきらか]] (akiraka)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[ちょう]] (chō)|kun readings=[[あきらか]] (akiraka)}}
 
 * '''Other info''':  
 
