--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -13,6 +13,7 @@
 ====Antonyms====
 #(1 above) To [[blow]]
 #(2, 3 above) To [[rock]], to [[rule]]
+#(4 above) To [[use]] mouth for pleasure in sexual intercoruce.
 
 ====Translations====
 '''To use the mouth to pull in liquid substances for ingestion or to perform a similar act on solid material without ingestion'''
