--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -17,19 +17,28 @@ From Old English [[ceosan|ċēosan]].
 *[[chosen]]
 
 ==== Translations ====
+{{top}}
+*Albanian: [[zgjedh]]
+*Catalan: [[elegir]]
+*Croatian: [[izabrati]], [[izabirati]]
 *Danish: [[vælge]]
-*Dutch: [[kiezen]], [[uitkiezen]], [[besluiten]]
+*Dutch: [[kiezen]]
 *Esperanto: [[elekti]]
 *Finnish: [[valita]]
 *French: [[choisir]]
-*German: [[auswählen]]
-*Indonesian: [[pilih]], [[pilah]], [[pilih|memilih]]
+*German: [[wahlen]]
+{{mid}}
+*Hungarian: [[választ]]
+*Ilocano: [[pili]]
+*Indonesian: [[pilih]]
 *Italian: [[scegliere]]
 *Japanese: [[選ぶ]] ([[えらぶ]], erabu)
 *Norwegian: [[velge]], [[utvelge]], [[beslutte]]
 *Slovene: [[izbrati]]
 *Spanish: [[escoger]], [[elegir]]
 *Swedish: [[välja]]
+*Tagalog: [[pili]]
+{{bottom}}
 
 [[de:choose]]
 [[fr:choose]]
