--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -38,6 +38,7 @@ From Old English [[ceosan|ċēosan]].
 *Spanish: [[escoger]], [[elegir]]
 *Swedish: [[välja]]
 *Tagalog: [[pili]]
+*Tongan: [[fili]]
 {{bottom}}
 
 [[de:choose]]
