confirm dutch <port#1050517>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -41,6 +41,7 @@ Old English [[port#Old English|port]], from Latin [[portus]] ‘port, harbor’.
 
 '''town or city containing such a place'''
 {{top}}
+*Dutch: [[havenstad]]
 *Finnish: [[satama]], [[satamakaupunki]]
 *French: port {{m}}
 *German: [[Hafenstadt]] ''f''
@@ -70,7 +71,6 @@ Old English [[port#Old English|port]], from Latin [[portus]] ‘port, harbor’.
 =====Translations to be checked=====
 {{checktrans}}
 
-*{{ttbc|Dutch}}: port {{m}} (2), [[schooltas]] ''f'' (3)
 *Greek:
 **(4) [[σύνδεση εισόδου]] ''f'', [[σύνδεση εξόδου]] ''f''
 *{{ttbc|Indonesian}}: [[labuh|pelabuhan]] (1)
@@ -93,7 +93,7 @@ Old English [[port#Old English|port]], from Latin [[portus]] ‘port, harbor’.
 =====Translations=====
 '''of or relating to port, the lefthand side of a vessel'''
 {{top}}
-*Dutch: [[haven-]]
+*Dutch: [[bakboord-]]
 *French: du [[bâbord]]
 {{mid}}
 *Portuguese: [[portu&aacute;rio]]
@@ -152,6 +152,7 @@ Named from [[w:Oporto|Oporto]], a city in [[Portugal]] from where the wines were
 
 '''type of fortified wine traditionally made in Portugal'''
 {{top}}
+*Dutch: [[porto]], [[port]]
 *Finnish: [[portviini]]
 *French: [[vin de Porto]] {{m}}
 *German: [[Portwein]] {{m}}
