--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -19,6 +19,7 @@ From the Latin [[id est]], meaning “that is”
 ====Translations====
 *French: [[c.-à-d.]]
 *German: [[d.h.]] (''[[das heißt]]'')
+*Russian: [[т.е.]] ([[то-есть]], ''tó-jest’)
 *Spanish: [[es decir]]
 
 [[de:i.e.]]
