--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -9,22 +9,57 @@
 # {{law}} A [[charge]] of misconduct brought in a [[legal]] proceding.
 
 ====Translations====
+;The male ruler of a county (1)
 {{top}}
-*[[Breton]]: [[kont]] {{m}} -ed {{p}} (1), [[kont]] {{f}} -où {{p}} (2)
-*[[w:Danish language|Danish]]: [[greve]] {{c}} (1)
-*Dutch: [[graaf]] {{m}} (1), [[telling]] {{f}} (2), [[aftelling]] {{f}} (3)
-*Finnish: [[kreivi]] (1), [[määrä]] (2), [[lähtölaskenta]] (3)
-*French: [[comte]] {{m}} (1)
-*German: [[Graf]] {{m}} (1)
-*[[Lithuanian]]: [[grafas]] {{m}} (1)
+*[[Breton]]: [[kont]] {{m}} -ed {{p}}
+*[[w:Danish language|Danish]]: [[greve]] {{c}}
+*Dutch: [[graaf]] {{m}}
+*Finnish: [[kreivi]]
+*French: [[comte]] {{m}}
+*German: [[Graf]] {{m}}
+*[[Lithuanian]]: [[grafas]] {{m}}
 {{mid}}
-*Polish: [[hrabia]] {{m}}, [[hrabina]] {{f}} (1), [[odliczanie]] {{n}} (3)
-*Portuguese: [[conde]] {{m}} (1)
-*Romanian: [[conte]] {{m}} (1), [[numărare]] {{f}} (2), [[numărătoare]] {{f}} (3)
-*Russian: [[граф]] (1), [[счёт]] (2), [[отсчёт]] (3)
-*Slovene: [[grof]] {{m}} (1), [[rezultat]] {{m}} (2), [[odštevanje]] {{n}} (3)
-*Spanish: [[conde]] {{m}} (1)
-*Telugu: [[లెక్క]] (lekka), [[లెక్కింపు]] (lekkiMpu)
+*Polish: [[hrabina]] {{f}}
+*Portuguese: [[conde]] {{m}}
+*Romanian: [[conte]] {{m}}
+*Russian: [[граф]]
+*Slovene: [[grof]] {{m}}
+*Spanish: [[conde]] {{m}}
+{{bottom}}
+
+;The result of a tally that reveals the number of items in a set (2)
+{{top}}
+*[[Breton]]: [[kont]] {{f}} -où {{p}}
+*Dutch: [[telling]] {{f}}
+*Finnish: [[määrä]]
+{{mid}}
+*Romanian: [[numărare]] {{f}}
+*Russian: [[счёт]]
+*Slovene: [[rezultat]] {{m}}
+{{bottom}}
+
+;A countdown (3)
+{{top}}
+*Dutch: [[aftelling]] {{f}}
+*Finnish: [[lähtölaskenta]]
+*Polish: [[odliczanie]] {{n}}
+{{mid}}
+*Romanian: [[numărătoare]] {{f}}
+*Russian: [[отсчёт]]
+*Slovene: [[odštevanje]] {{n}}
+{{bottom}}
+
+;A charge of misconduct (4)
+{{top}}
+*Finnish: [[syyte]], [[syytekohta]]
+{{bottom}}
+
+=====Translations to be categorized=====
+{{checktrans}}
+{{top}}
+*{{ttbc|Polish}}: [[hrabia]] {{m}}
+{{mid}}
+*{{ttbc|Telugu}}: [[లెక్క]] (lekka), [[లెక్కింపు]] (lekkiMpu)
 {{bottom}}
 
 ===Verb===
