--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -49,6 +49,7 @@
 ====Translations====
 *French: brancher (3)
 *German: [[abzweigen]] (1), [[verzweigen]] (2), [[springen]] (3)
+*Telugu: [[[[చీలు]] (cheelu), [[చీలిపోవు]] (cheelipOvu)
 
 ===Related terms===
 *[[branch off]]
