--- a/en/偬/偬.11132.wikitext
+++ b/en/偬/偬.11132.wikitext
@@ -29,11 +29,11 @@
 ***'''[[Yale]]''': 
 
 * '''Style''': [[Simplified Chinese]] 
-** '''[[Traditional Chinese|Traditional]] equivalent''': [[傯]ㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎ]
+** '''[[Traditional Chinese|Traditional]] equivalent''': [[傯]]
 
 * '''Other info''': 
 
-----ㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎ
+----
 
 ==Japanese==
 ===[[Kanji]]===
