--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -16,7 +16,7 @@
 # A gentle [[bend]], such as in a road.
 # A figure containing no [[straight]] portions and no [[angle]]s.
 # (''geometry'') A [[one-dimensional]] figure of [[non-zero]] length.
-# (''analytic geometry'')  A [[continuous map]] from a one-dimensional [[space]] to a multidimensional space, or its [[graph]].
+# (''analytic geometry'')  A [[continuous map]] or its [[graph]] from a one-dimensional [[space]] to a multidimensional space.
 # (''algebra'') An [[algebraic curve]]; a [[polynomial]] [[relation]] of the planar coordinates.
 # (''topology'') A one-dimensional [[continuum]].
 # (''informal, usually in plural'' '''curves''') The attractive shape of a woman's body.
