--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -39,6 +39,7 @@ Old English [[cuman]].
 *German: [[kommen]]
 *Greek: [[έρχομαι]] (érkhomai)
 *Hebrew: [[לבוא]] (le-vó)
+*Hindi: [[आना]] (ānā)
 *Hungarian: [[jönni]]
 *Ido: [[venar]]
 *Indonesian: [[datang]], [[datang|mendatangi]], [[datang|mendatang]], [[datang|mendatangkan]]
@@ -61,6 +62,7 @@ Old English [[cuman]].
 *Spanish: [[venir]]
 *Swedish: [[komma]]
 *Turkish: [[gelmek]]
+*Urdu: {{URchar|[[انا|آنا]]}}
 {{bottom}}
 
 [[Category:English irregular verbs]]
